src/routes/_home/tags/home-granular/home-granular.style.module.scss
@use "app/styles/section-color.scss" as section-color;

.section {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  gap: 3rem;
  margin-bottom: calc(min(0.55rem, max(0.3rem, 1.4dvw)) * 30);
  margin-left: var(--root-bleed);
  margin-right: var(--root-bleed);
  padding: 2rem;
  border: 3px solid transparent;
  border-radius: 2rem;
  background-origin: border-box;
  background-clip: padding-box, border-box;
  @include section-color.set("yellow");

  @media (prefers-color-scheme: light) {
    background-color: var(--section-color-dim);
  }
  @media (prefers-color-scheme: dark) {
    background-image:
      linear-gradient(var(--color-background), var(--color-background)),
      linear-gradient(to right, var(--section-color), var(--section-color-alt));
  }
  @media (min-width: 48rem) {
    padding: 3rem;
  }
  @media (min-width: 64rem) {
    background-color: transparent;
    margin-bottom: 6rem;
    padding: 0;
    flex-direction: row;
    align-items: center;
    background-image: none;
  }
}

.content {
  display: flex;
  flex-direction: column;
  order: 0;

  @media (min-width: 64rem) {
    padding: 0 calc(50% - 38rem);
  }

  h2 {
    font-size: max(2.8rem, min(3.3rem, 8dvw));
    font-weight: 500;
    margin-bottom: 1.25rem;
  }

  p {
    font-size: 1.1rem;
    line-height: 1.6;
    margin: 1rem 0;
  }
}

.headingText {
  display: inline-block;
  color: var(--section-color-dark);
  @media (prefers-color-scheme: dark) {
    color: var(--color-foreground);
  }
  @media (prefers-color-scheme: light) and (min-width: 64rem) {
    background-clip: text;
    color: transparent;
    background-image: linear-gradient(
      to right,
      var(--section-color-dark),
      var(--section-color-light)
    );
  }
}

.cta {
  display: inline-block;
  margin-top: 1.5rem;
  border-radius: 2rem;
  padding: 1rem 4rem;
  text-decoration: none;
  color: var(--color-white);
  background: var(--section-color-dark);
  font-size: 1.1rem;
  font-weight: 500;
  text-align: center;
  align-self: flex-start;
  justify-self: end;
  width: 100%;

  @media (prefers-color-scheme: dark) {
    color: var(--color-foreground);
    background: linear-gradient(
      to right,
      var(--section-color-dark),
      var(--section-color-light)
    );
  }

  @media (min-width: 30rem) {
    width: auto;
  }

  @media (min-width: 64rem) {
    padding: 0.8rem 2.4rem;
  }
}

.demo {
  position: relative;
  display: flex;
  justify-content: space-between;
  margin-bottom: -30em;
  font-size: min(0.55rem, max(0.3rem, 1.4dvw));
  align-items: center;
  border-radius: 2rem;
  @media (min-width: 40rem) {
    padding: 0 2rem;
  }
  @media (min-width: 48rem) {
    justify-content: center;
  }
  @media (min-width: 64rem) {
    margin-bottom: 0;
    margin-right: 4rem;
    padding: 5rem;
    padding-top: 6rem;
    padding-bottom: 5rem;
    @media (prefers-color-scheme: light) {
      &::before {
        content: "";
        position: absolute;
        inset: 0;
        background: var(--section-color-dim);
        border-radius: 2rem;
        clip-path: polygon(0 0, 100% 0, 100% calc(100% - 4rem), calc(100% - 4rem) 100%, 0 100%, 0 0);
      }
    }

    @media (prefers-color-scheme: dark) {
      border: 3px solid transparent;
      background-origin: border-box;
      background-clip: padding-box, border-box;
      border-top-right-radius: 0;
      border-bottom-right-radius: 0;
      background-image:
        linear-gradient(var(--color-background), var(--color-background)),
        linear-gradient(
          to right,
          var(--section-color),
          var(--section-color-alt)
        );
    }
  }

  > :first-child {
    filter: brightness(95%) grayscale(60%);
    font-size: 0.65em;
    margin-left: -1.25rem;
    @media (min-width: 40rem) {
      margin-left: 1rem;
    }
    @media (min-width: 48rem) {
      font-size: 0.8em;
      margin-bottom: 0;
    }
    @media (min-width: 64rem) {
      margin-left: -2rem;
    }
    @media (min-width: 90rem) {
      margin-left: 0;
    }
  }
  > :last-child {
    margin-left: -16rem;
    margin-right: -1.25rem;

    > :first-child {
      box-shadow:
        0 15px 60px -30px var(--section-color-dim),
        0 15px 60px -30px var(--section-color-dim-alt);
    }

    @media (min-width: 40rem) {
      margin-right: 1rem;
    }
    @media (min-width: 48rem) {
      margin-left: -4rem;
    }
    @media (min-width: 64rem) {
      margin-right: -8rem;
    }
  }
}

